@@ -1,5 +1,8 @@
 2012-05-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR debug/53174
+	* gcc.dg/pr53174.c: New test.
+
 	PR target/53187
 	* gcc.target/arm/pr53187.c: New test.
 	* gcc.c-torture/compile/pr53187.c: New test.
