@@ -1,5 +1,9 @@
 2012-05-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR debug/53174
+	* tree-predcom.c (remove_stmt): Call reset_debug_uses on stmts being
+	removed.
+
 	PR target/53187
 	* config/arm/arm.c (arm_select_cc_mode): If x has MODE_CC class
 	mode, return that mode.
